# sdk-alif

applications/bletestapp/: CMakeLists.txt  prj.conf
applications/bletestapp/src/: ble_handler.c  power_shell.c
samples/bluetooth/le_periph_pm/: prj.conf
samples/bluetooth/le_periph_pm/src/: appl_shell.c  appl_shell.h  main.c
subsys/: Kconfig
subsys/modules/testcommands/: CMakeLists.txt  Kconfig
subsys/modules/testcommands/shell/: CMakeLists.txt  Kconfig
subsys/modules/testcommands/shell/src/: testcommands_shell.c
subsys/powermgr/pm/: power_mgr.c  power_mgr.h
subsys/powermgr/shell/src/: power_mgr_shell.c
